WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202203
Position::upstream/downstream should not need to call ensureLineBoxes
https://bugs.webkit.org/show_bug.cgi?id=202203
Summary
Position::upstream/downstream should not need to call ensureLineBoxes
Antti Koivisto
Reported
2019-09-25 07:36:43 PDT
The code doesn't require lineboxes anymore.
Attachments
patch
(1.83 KB, patch)
2019-09-25 07:37 PDT
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews214 for win-future
(13.95 MB, application/zip)
2019-09-25 09:32 PDT
,
EWS Watchlist
no flags
Details
patch
(5.17 KB, patch)
2019-10-10 03:03 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
wip
(9.53 KB, patch)
2019-10-10 08:32 PDT
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews215 for win-future
(14.94 MB, application/zip)
2019-10-10 14:32 PDT
,
EWS Watchlist
no flags
Details
wip
(12.59 KB, patch)
2019-10-11 02:59 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
wip
(19.61 KB, patch)
2019-10-11 07:05 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(23.25 KB, patch)
2019-10-11 08:17 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(24.80 KB, patch)
2019-10-11 09:14 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(24.89 KB, patch)
2019-10-11 09:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(9)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-09-25 07:37:29 PDT
Created
attachment 379548
[details]
patch
EWS Watchlist
Comment 2
2019-09-25 09:32:27 PDT
Comment on
attachment 379548
[details]
patch
Attachment 379548
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13067068
New failing tests: fast/forms/textarea-paste-newline.html fast/text/whitespace/pre-wrap-overflow-selection.html editing/inserting/4960120-1.html fast/text/pre-wrap-trailing-tab.html
EWS Watchlist
Comment 3
2019-09-25 09:32:37 PDT
Created
attachment 379555
[details]
Archive of layout-test-results from ews214 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews214 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Antti Koivisto
Comment 4
2019-10-10 03:03:40 PDT
Created
attachment 380622
[details]
patch
Antti Koivisto
Comment 5
2019-10-10 08:32:20 PDT
Created
attachment 380644
[details]
wip
EWS Watchlist
Comment 6
2019-10-10 14:32:00 PDT
Comment on
attachment 380644
[details]
wip
Attachment 380644
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13115609
New failing tests: fast/text/simple-line-layout-multiple-trailingwhitespace-crash.html fast/forms/basic-textareas-quirks-simple-lines.html fast/loader/text-document-wrapping.html fast/forms/textarea-scroll-height.html fast/parser/open-comment-in-textarea.html fast/css/font-face-zero-hash-key.html platform/win/editing/selection/shift-page-up-down.html fast/forms/targeted-frame-submission.html fast/selectors/text-field-selection-text-shadow.html
EWS Watchlist
Comment 7
2019-10-10 14:32:03 PDT
Created
attachment 380684
[details]
Archive of layout-test-results from ews215 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews215 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Antti Koivisto
Comment 8
2019-10-11 02:59:12 PDT
Created
attachment 380737
[details]
wip
Antti Koivisto
Comment 9
2019-10-11 07:05:24 PDT
Created
attachment 380750
[details]
wip
Antti Koivisto
Comment 10
2019-10-11 08:17:03 PDT
Created
attachment 380756
[details]
patch
Antti Koivisto
Comment 11
2019-10-11 09:14:19 PDT
Created
attachment 380759
[details]
patch
Antti Koivisto
Comment 12
2019-10-11 09:35:13 PDT
Created
attachment 380760
[details]
patch
WebKit Commit Bot
Comment 13
2019-10-11 12:03:45 PDT
Comment on
attachment 380760
[details]
patch Clearing flags on attachment: 380760 Committed
r251015
: <
https://trac.webkit.org/changeset/251015
>
WebKit Commit Bot
Comment 14
2019-10-11 12:03:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 15
2019-10-11 12:04:24 PDT
<
rdar://problem/56199072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug